# freya_v2

./: .abacus.donotdelete  .env.example  .gitignore  AI_CODING_PROMPT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  Dockerfile  EXECUTIVE_SUMMARY.md  LICENSE  MCP_INTEGRATION_ANALYSIS.md  MCP_LOCAL_VS_CLOUD.md  OLLAMA_MODEL_RECOMMENDATION.md  PHASE_1.5_CODE_REVIEW.md  PHASE_1.5_MERGE_SUMMARY.md  PHASE_2_PLAN_STT.md  PHASE_2_VERIFICATION_REPORT.md  PLAN_ASSESSMENT_STT.md  PRE_IMPLEMENTATION_AUDIT.md  README.md  REQUIREMENTS.md  ROADMAP.md  TESTING.md  TESTING_CHECKLIST.md  TEST_RESULTS.md  architecture.mmd  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: mcp_servers.yaml
config/prompts/: personality_casual.txt  personality_friendly.txt  personality_professional.txt  personality_witty_sarcastic.txt  system_prompt_template.txt
docs/: ELEVENLABS_SETUP.md  FREYA_CODING_MODEL_PROMPT.md  GUI_SETUP.md  PERSONALITY_MCP_RESEARCH.md  PHASE_1_SETUP.md  ROADMAP_V1_ORIGINAL.md
docs/assessments/: PHASE_1.5_MCP_SERVERS_RECOMMENDATION.md
docs/phase_reviews/: PHASE_1.75_CODE_REVIEW.md
docs/planning/: PHASE_1.75_PROMPT_GUI.md  PHASE_2D_BUILD_NOW_PLAN.md  PHASE_2D_COMPLETION_SUMMARY.md  PHASE_2D_PLAN_GUI_ENHANCEMENTS.md  PHASE_2_FIXES_PLAN.md  PHASE_2_PROMPT_AUDIO.md
scripts/: install_mcp_servers.sh
src/: __init__.py  main.py
src/core/: base_service.py  circuit_breaker.py  config.py  config_v2.py  message_bus.py  message_schemas.py  retry.py
src/gui/frontend/: index.html  package-lock.json  package.json
src/gui/frontend/src/: App.jsx  index.css
src/gui/frontend/src/components/: AudioTester.jsx  CoverageVisualization.jsx  DebugPanel.jsx  ErrorBoundary.jsx  MessageCard.jsx  ServiceMetrics.jsx  TestResults.jsx  TestRunner.jsx  VolumeMeter.jsx
src/gui/frontend/src/styles/: AudioTester.css  DebugPanel.css  ServiceMetrics.css  TestRunner.css
src/services/audio/: __init__.py  audio_manager.py
src/services/gui/: __init__.py  auth.py  gui_service.py  models.py  rate_limiter.py  websocket_manager.py
src/services/llm/: llm_engine.py
src/services/mcp_gateway/: __init__.py  mcp_gateway.py
src/services/notification/: __init__.py  models.py  notification_service.py
src/services/stt/: __init__.py  stt_service.py
src/services/tts/: __init__.py  tts_service.py
tests/: README.md  conftest.py  test_stt_manual.py
tests/integration/: test_audio_pipeline.py  test_end_to_end.py  test_notification_integration.py
tests/mocks/: mock_audio.py  mock_mcp.py
tests/unit/: test_audio_manager.py  test_base_service.py  test_config.py  test_gui_service.py  test_llm_engine.py  test_mcp_gateway.py  test_message_bus.py  test_notification_service.py  test_tts_service.py
