[project]
name = "freya-v2"
version = "0.2.0"
description = "A location-aware, multi-room personal AI assistant with persistent memory and MCP integration"
authors = [
    {name = "MrPink1977", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Async & Concurrency
    "asyncio>=3.4.3",
    
    # Message Bus
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    
    # Web Framework (GUI Backend)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    
    # LLM
    "ollama>=0.1.0",
    
    # Speech-to-Text
    "faster-whisper>=0.10.0",
    
    # Text-to-Speech
    "elevenlabs>=0.2.0",
    
    # Wake Word
    "pvporcupine>=3.0.0",
    
    # Memory & Vector DB
    "chromadb>=0.4.22",
    
    # MCP
    "mcp>=1.0.0",
    "httpx>=0.25.0",  # HTTP client for MCP servers
    "aiofiles>=23.2.0",  # Async file operations
    
    # Vision
    "opencv-python>=4.9.0",
    "ultralytics>=8.1.0",
    
    # Audio Processing
    "pyaudio>=0.2.14",
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    
    # Utilities
    "loguru>=0.7.2",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
